src/test/ui/issues/issue-13497.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-13497.rs:2:5
   |
LL |     &str
   |     ^ help: consider giving it a 'static lifetime: `&'static`
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
